# Mathpix-Tex-Sources-Spliter

./: README.md  home.py  pyproject.toml  split_mathpix_tex_source.py
TestSamples/: 2024학년도 서바이벌 정규 1회 - 문제.tex  2024학년도 서바이벌 정규 1회 - 해설.tex  2025학년도 강대모의고사K 03회 - 문제.tex  2025학년도 강대모의고사K 03회 - 해설.tex  2025학년도 강대모의고사K 04회 - 문제.tex  2025학년도 강대모의고사K 04회 - 해설.tex  2025학년도 강대모의고사X 04회 - 문제.tex  2025학년도 강대모의고사X 04회 - 해설.tex
modify_latex_scripts/: letter_of_choice.py
